# radiogrid

./: README.MD  pyproject.toml  run_game.py  run_ui.py
contributions/: README.md  cartographer_team.py
contributions/cartographers/: README.md  cartographer_team.py
contributions/phantoms/: README.md  phantom_team.py
contributions/rendezvous/: README.md  rendezvous_team.py
contributions/smart/: README.md  smart_team.py
radiogrid/: registry.py
radiogrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
radiogrid/bots/: explorer_bot.py  random_bot.py
radiogrid/engine/: __init__.py  bot_interface.py  game.py  map.py  models.py
radiogrid/ui/: server.py
radiogrid/ui/static/css/: style.css
radiogrid/ui/static/js/: app.js
radiogrid/ui/templates/: index.html
tests/: conftest.py  test_bot_perspective.py  test_game_master.py  test_registry_and_history.py  test_team_performance.py
