[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "radiogrid"
version = "1.0.0"
description = "A Bot Exploration & Communication Game"
requires-python = ">=3.10"
dependencies = ["flask>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
